@@ -39,7 +39,8 @@ HEADERS += \
     $$PWD/backport/qoverload.h \
     $$PWD/testvapplication.h \
     $$PWD/literals.h \
-    $$PWD/qt_dispatch/qt_dispatch.h
+    $$PWD/qt_dispatch/qt_dispatch.h \
+    $$PWD/vdatastreamenum.h
 
 # Qt's versions
 # 5.2.0, 5.2.1
