@@ -10,6 +10,7 @@
 - [#909] Valentina produces wrong united path.
 - [#912] Labels in inactive state return to initial color.
 - [#913] Unable to save changes for piece path if it doesn't contain a point.
+- [#914] Filtering custom seam allowance paths prevent including more than one.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
